#######################################################################
# Sphinx conf.py file

# python_path = '/'.join( [ get_option( 'prefix' ), 'python' ] )
# include_path = '/'.join( [ get_option( 'prefix' ),
#                            get_option( 'includedir' ) ] )
# lib_path = '/'.join( [ get_option( 'prefix' ),
#                       get_option( 'libdir' ) ] )

# conf_sphinx_data = configuration_data()
# conf_sphinx_data.set( 'PYTHON_PATH', python_path )
# conf_sphinx_data.set( 'INCLUDE_PATH', include_path )
# conf_sphinx_data.set( 'LIBRARY_PATH', lib_path )
# conf_sphinx_data.set( 'SOURCE_DIR', meson.current_source_dir() )

# sphinx_file = configure_file( output : 'conf.py',
#                               input : 'conf.py.in',
#                               configuration : conf_sphinx_data,
#                               install : false )

#######################################################################
